--- a/css/styles.css
+++ b/css/styles.css
@@ -1,364 +1,19 @@
 body {
-    width: 900px;
-    margin: auto;
-    line-height: 150%;
-    font-family: "Comic Sans MS", "Arial", "sans-serif";
-    font-size: 12px;
-    color: #7c4600;
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-html {
-    height: 100%;
-}
-
-#content {
-    flex-grow: 1;
-}
-
-a {
-    text-decoration: none;
-    color: #7c4600;
-}
-
-a:hover {
-    font-weight: 500;
-    color: #ffc986;
-}
-
-nav a:hover {
-    background-color: #7c4600;
-    color: white;
-}
-
-nav {
-    display: flex;
-    font-weight: bold;
-}
-
-nav > a {
-    border-right: 1px solid #7c4600;
-    flex-grow: 1;
-    text-align: center;
-}
-
-nav > a:last-child {
-    border-right: 0px;
-}
-
-h1 {
-    text-align: center;
-}
-
-footer {
-    background-color: #ffc986;
-    display: flex;
-    flex-direction: column;
-    flex-shrink: 0;
-    margin-top: 10px;
-}
-
-footer > div:last-child {
-    justify-content: space-between;
-    padding: 0 5px 0 5px;
-    border-top: 1px solid white;
-}
-
-#foot {
-    display: flex;
-    align-items: center;
-}
-
-#foot img {
-    margin: 5px;
-}
-
-#foot img:hover {
-    margin: 4px;
-    width: 24px;
-    height: 24px;
-}
-
-#foot a:hover {
-    border: 0px;
-}
-
-footer > div {
-    display: flex;
-}
-
-footer > div > div > a {
-    font-size: 10px;
-    display: flex;
-}
-
-footer > div:first-child > div {
-    display: flex;
-    flex-direction: column;
-}
-
-footer > div:first-child {
-    margin: 20px;
-    justify-content: space-around;
-}
-
-footer a {
-    border-top: 1px solid #ffc986;
-    border-bottom: 1px solid #ffc986;
-}
-
-footer a:hover {
-    border-top: 1px solid #7c4600;
-    border-bottom: 1px solid #7c4600;
-    color: #7c4600;
-}
-
-#CB {
-    justify-content: flex-start;
-    align-items: center;
-}
-
-#CB img:first-child {
-    background-color: white;
-    padding: 5px;
-}
-
-#CB img {
-    margin: 10px;
-    height: 42px;
-    width: 32px;
-}
-
-#lastfoot > p {
-    margin: 5px;
-}
-
-#lastfoot > p:first-child {
-    font-size: 10px;
-}
-
-@font-face {
-    font-family: "FontLogo";
-    src: url('/Web/font/FontLogo.otf');
-}
-
-#head {
-    padding: 20px;
-    display: flex;
-}
-
-#connexion a:hover {
-    color: #ffc986;
-}
-
-#connexion p {
-    color: #ffc986;
-}
-
-#connexion {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#connexion div:last-child {
-    display: flex;
-    flex-direction: column;
-    margin-left: 10px;
-}
-
-#logo > img {
-
-    margin-left: 10px;
-    margin-right: 10px;
-}
-
-#logo{
-    display: flex;
-}
-
-#logo p {
-    margin-top: auto;
-    margin-bottom: auto;
-    margin-left: 10px;
-    margin-right: 10px;
-    font-family: "FontLogo";
-    font-size: 40px;
-}
-
-#chercher {
-    margin: auto;
-    border: 1px solid #7c4600;
-}
-
-#search_input {
-    border: 0px;
-    width: 170px;
-    height: 18px;
-}
-
-#search_button {
-    border: 0px;
-    background-color: white;
-    padding: 5px;
-    margin-left: 1px;
-    border-radius: 5px;
-}
-
-#search_button:hover {
-    background: linear-gradient(white 20%, #BBBBBB, white 70%);
-}
-
-input {
-    border-radius: 4px;
-    text-align: center;
-}
-
-header form {
-    background: linear-gradient(white 20%, #BBBBBB, white 70%);
-}
-
-header {
-    margin-bottom: 10px;
-}
-
-form {
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-}
-
-#content form {
-    flex-direction: column;
-    justify-content: space-around;
-}
-
-#content input {
-    height: 30px;
-    width: 230px;
-    font-size: 20px;
-    border: 1px solid #7c4600;
-}
-
-#content input:focus {
-    border: 1px solid #ffc986;
-    outline: 0px;
-}
-
-#signupForm {
-    height: 700px;
-}
-
-#signinForm {
-    height: 350px;
-}
-
-h3 {
-    font-size: 30px;
-    font-weight: bold;
-}
-
-label {
-    font-size: 20px;
-    margin-top: 20px;
-}
-
-#content .submitButton {
-    margin: 30px;
-    width: 250px;
-    height: 40px;
-    background-color: #7c4600;
-    color: #ffc986;
-}
-
-#content .submitButton:hover {
-    background-color: #ffc986;
-    color: #7c4600;
-}
-
-#accueil {
-    background-image: url('/Web/img/wallpaper.jpg');
-    background-repeat: round;
-    height: 600px;
-    color: #7c4600;
-    display: flex;
-    flex-direction: column;
-    font-size: 20px;
-}
-
-#accueil > div {
-    flex-grow: 1;
-}
-
-#acc1 > h1 {
-    background-color: white;
-    padding: 35px;
-    text-align: center;
-    margin: 10px;
-    font-size: 100px;
-    font-family: "FontLogo";
-}
-
-#acc1 > p {
-    background-color: white;
-    padding: 20px;
-    text-align: center;
-    margin: 10px;
-}
-
-#accueil > div > a {
-    background-color: white;
-    padding: 10px;
-}
-
-#accueil > div > a:hover {
-    background-color: #7c4600;
-    color: white;
-}
-
-#acc2 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
-#acc1 {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-end;
-}
-
-.addbasket{
-    display: ruby;
-}
-fieldset div {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-fieldset div:last-child {
-    margin-top: 20px;
-    margin-bottom: 20px;
-}
-
-.loading {
-    background-image: url("/Web/img/loading.gif");
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.confirm{
-    background-color: lightgreen;
-    color: darkgreen;
-    border: solid 1px darkgreen;
-}
-
-.erreur{
-    background-color: #ff7575;
-    color: #cc0000;
-    border: solid 1px #cc0000;
+ margin:0;
+}
+
+.material-icons {
+    font-family: 'Material Icons';
+    font-weight: normal;
+    font-style: normal;
+    font-size: 24px;
+    line-height: 1;
+    letter-spacing: normal;
+    text-transform: none;
+    display: inline-block;
+    white-space: nowrap;
+    word-wrap: normal;
+    direction: ltr;
+    -webkit-font-feature-settings: 'liga';
+    -webkit-font-smoothing: antialiased;
 }
